fix(styles): adjust top positioning of page title for better alignment

--- a/rg_web/src/styles.scss
+++ b/rg_web/src/styles.scss
@@ -302,7 +302,7 @@ h1.page-title {
   position: relative;
   display: block;
   float: right;
-  top: 20px;
+  top: 35px;
 }
 
 .main-navigation ul {
